добавил моб на страницу оплаты

--- a/src/paypage.html
+++ b/src/paypage.html
@@ -232,6 +232,28 @@
                 </ul>
             </div>
         </section>
+        <section class=" section recipe__section">
+            <div class="container recipe__container">
+                <h3 class="pay__payment-heading">Recipe for your first lunch</h3>
+                <div class="recipe__wrap">
+                    <img class="recipe__mobile" src="./images/mobile.png" alt="mobile">
+                    <div class="recipe__mobile-content-wrap">
+                        <div class="recipe__mobile-status-bar">
+                            <p class="recipe__mobile-conten-time">15:49</p>
+                            <div class="recipe__mobile-conten-status-wrap">
+                                <img src="./images/signal-icon-black.png" alt="Signal Icon" class="recipe__mobile-conten-status-icon">
+                                <img src="./images/wifi-icon-black.png" alt="Wifi Icon" class="recipe__mobile-conten-status-icon">
+                                <img src="./images/battery-icon-black.png" alt="Battery Icon" class="recipe__mobile-conten-status-icon">
+                            </div>
+                        </div>
+                        <img class="recipe__mobile-content" src="./images/mobile-content.png" alt="content">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section testimonials__section">
+
+        </section>
     </main>
     <footer class="section footer__section">
         <div class="container footer__container">
