--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -25,10 +25,12 @@
     </header>
     <main>
         <section class="section pay__hero-section">
-            <div class="container pay__hero-container">
-                <h2 class="pay__hero-heading">Thank you for the application, in the near future our manager will contact you?</h2>
+            <div class="container pay__hero-container thanks__container">
+                <h2 class="pay__hero-heading thanks__heading">Thank you for the application, in the near future our manager will contact you?</h2>
             </div>
-            <a class="thanks-button" href="index.html">To Home Page</a>
+            <div class="final__summary-button-wrap thanks__button-wrap">
+                <a href="./index.html" class="final__hero-button">go to Main page</a>
+            </div>
             </div>
             <div class="final__hero-parallax">
                 <img src="./images/image-16.png" class="final__hero-parallax-image--first" alt="image-16"
