--- a/src/final.html
+++ b/src/final.html
@@ -1132,17 +1132,19 @@ Recipes</h3>
     <footer class="section footer__section">
       <div class="container footer__container">
         <ul class="footer__menu">
+          <!-- <li class="footer__menu-item">
+            <a class="footer__menu-link" href="./measurements.html">Blog</a>
+          </li> -->
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="./measurements.html">Блог</a>
+            <a class="footer__menu-link" href="../src/conditions.html">General Conditions</a>
           </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
+          <!-- <li class="footer__menu-item">
+            <a class="footer__menu-link" href="">Data Protection Policy</a>
+          </li> -->
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Политика защиты данных</a>
+            <a class="footer__menu-link" href="../src/cookie.html">Cookie policy</a>
           </li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Обработка куки-файлов</a>
-          </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
+          <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li> -->
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
           ><svg class="logo logo--footer">
@@ -1150,8 +1152,8 @@ Recipes</h3>
           </svg>
         </a>
         <div class="footer__license-wrap">
-          <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано Dimas IT</p>
+          <h3 class="footer__license-heading">2022 ALL RIGHTS RESERVED</h3>
+          <p class="footer__license-desc">Developed by dPartner IT</p>
           <button class="reset-button">Reset answers</button>
         </div>
       </div>
