--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
             <span class="burger__line"></span>
           </button>
           <div class="header__burger-menu active">
-            <a href="" class="burger-menu__link">Центр помощи</a>
-            <a href="" class="burger-menu__link">Блог</a>
-            <a href="" class="burger-menu__link">Войти</a>
+            <a href="./index.html" class="burger-menu__link">Home</a>
+            <a href="../src/conditions.html" class="burger-menu__link">General Conditions</a>
+            <a href="../src/cookie.html" class="burger-menu__link">Cookie policy</a>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
         </a>
         <div class="footer__license-wrap">
           <h3 class="footer__license-heading">2022 ALL RIGHTS RESERVED</h3>
-          <p class="footer__license-desc">Developed by Dimas IT</p>
+          <p class="footer__license-desc">Developed by dPartner IT</p>
           <button class="reset-button">Reset answers</button>
         </div>
       </div>
