--- a/src/paypage.html
+++ b/src/paypage.html
@@ -43,7 +43,7 @@
                 <img src="./images/image-24.png" class="final__hero-parallax-image--third" alt="image-24"
                     style="transform: matrix(1, 0, 0, 1, 7.8375, -19.4651)" />
                 <img src="./images/image-25.png" class="final__hero-parallax-image--fourth" alt="image-25"
-                    style="transform: matrix(1, 0, 0, 1, 41.8, -12.9767)" />
+                    style="transform: matrix(1, 0, 0, 1, 31.8, 12.9767)" />
             </div>
         </section>
         <section class="section pay__payment-section">
@@ -857,30 +857,33 @@
     </main>
     <footer class="section footer__section">
         <div class="container footer__container">
-            <ul class="footer__menu">
-                <li class="footer__menu-item">
-                    <a class="footer__menu-link" href="./measurements.html">Блог</a>
-                </li>
-                <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
-                <li class="footer__menu-item">
-                    <a class="footer__menu-link" href="">Политика защиты данных</a>
-                </li>
-                <li class="footer__menu-item">
-                    <a class="footer__menu-link" href="">Обработка куки-файлов</a>
-                </li>
-                <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
-            </ul>
-            <a class="logo-link logo-link--footer" href="./index.html"><svg class="logo logo--footer">
-                    <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-                </svg>
-            </a>
-            <div class="footer__license-wrap">
-                <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-                <p class="footer__license-desc">Разработано Dimas IT</p>
-                <button class="reset-button">Reset answers</button>
-            </div>
+          <ul class="footer__menu">
+            <!-- <li class="footer__menu-item">
+              <a class="footer__menu-link" href="./measurements.html">Blog</a>
+            </li> -->
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="../src/conditions.html">General Conditions</a>
+            </li>
+            <!-- <li class="footer__menu-item">
+              <a class="footer__menu-link" href="">Data Protection Policy</a>
+            </li> -->
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="../src/cookie.html">Cookie policy</a>
+            </li>
+            <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li> -->
+          </ul>
+          <a class="logo-link logo-link--footer" href="./index.html"
+            ><svg class="logo logo--footer">
+              <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
+            </svg>
+          </a>
+          <div class="footer__license-wrap">
+            <h3 class="footer__license-heading">2022 ALL RIGHTS RESERVED</h3>
+            <p class="footer__license-desc">Developed by dPartner IT</p>
+            <button class="reset-button">Reset answers</button>
+          </div>
         </div>
-    </footer>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.6/dist/js/splide.js"></script>
     <script src="./paypage.js"></script>
     <script>
